# building-visitor-forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt.txt
notebooks/: catboost_v_02.ipynb  catboost_v_03.ipynb  catboost_v_04.ipynb  catboost_v_05.ipynb  catboost_v_07.ipynb  catboost_v_08.ipynb  catboost_v_check.ipynb  catboost_v_check_0.ipynb  catboost_v_check_2.ipynb  catboost_v_check_3.ipynb  cb_experiments_v_01.ipynb  cb_experiments_v_02.ipynb  cb_experiments_v_03.ipynb  cb_experiments_v_04.ipynb  cb_experiments_v_05.ipynb  cb_experiments_v_06.ipynb  shift_task_Pash.ipynb  shift_task_Pashina_A.ipynb  shift_task_Pashina_A_374.ipynb  shift_task_Pashina_ova_v_00.ipynb  shift_task_Pashina_ova_v_01.ipynb  shift_task_Pashina_ova_v_02.ipynb  shift_task_Pashina_ova_v_03.ipynb  shift_task_Pashina_ova_v_04.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/model-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/model-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/model-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/model-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/model-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/model-final/: catboost_training.json  learn_error.tsv  (+2 more)
pictures/: pass_counts_test.html  pass_counts_train.html
(+17 files in other folders)
