[tool.poetry]
name = "shift-test"
version = "0.1.0"
description = ""
authors = ["apashina <pashina3000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
lightgbm = "^4.5.0"
catboost = "^1.2.5"
shap = "^0.46.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
