[tool.poetry]
name = "shift-apashina"
version = "0.1.0"
description = ""
authors = ["apashina <pashina3000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "1.0.0"
pandas = "2.2.1"
numpy = "1.26.4"
scikit-learn = "1.4.1.post1"
lightgbm = "4.3.0"
catboost = "1.2.3"
optuna = "3.6.1"
tqdm = "4.66.5"
scipy = "1.13.0"
matplotlib = "3.8.4"
seaborn = "0.13.2"
shap = "0.45.0"
loguru = "0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
